# isaac-dobot

./: .gitattributes  .gitignore  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml  solidworks_transform_extraction.md
.devcontainer/base/: build-images.sh  devcontainer.json  docker-compose.devcontainer.yaml
.devcontainer/curobo/: build-images.sh  devcontainer.json  docker-compose.devcontainer.yaml
.github/workflows/: lint.yml
assets/: PCB_assembly.yaml  backpanel_support.yaml  backpanel_support2.yaml  finger_print_scanner.yaml
assets/Grasp_Editor/: grasp_editor.usd  (+1 more)
docker/: .env.base  .env.curobo  Dockerfile.base  Dockerfile.curobo  docker-compose.yaml
docs/: docker-and-devcontainer.md  grasp-and-assembly-offsets.md  mefron-history.md  robot-assembler.md
mantra scanner/: backpanel support.SLDPRT  finger print scanner.SLDPRT  jig assembly.SLDASM  main holder.SLDPRT  main_holder_jig.SLDPRT  mantra scanner assembly.SLDASM  screen.SLDPRT
scenes/: cell_scene.usda
scripts/: build_scene.py  build_scene_mefron.py  fix_cad_import_colors.py  franka_grasp_editor_scene.py  generate_cr5_gripper_grasp_editor_usd.py  generate_cr5_pgc140_urdf.py  import_cr5.py  mefron.py  mefron2.py  mefron_grasp_editor_scene.py  mefron_gripper_probe.py  mefron_screen_approach_probe.py  panda_hand_grasp_editor_scene.py  pgc140_gripper_probe.py  playback_waypoints.py  setup_curobo.py  teach_waypoint.py  test_mefron_assembly_headless.py  test_mefron_teleop_headless.py  test_teleop_headless.py  vendor_ur10_suction.py  waypoints.py
tests/: test_configs.py  test_waypoints.py
(+145 files in other folders)
