[project]
name = "isaac-cobot"
version = "0.1.0"
description = "Isaac Sim factory cell with a Dobot CR5 cobot, driven via cuRobo."
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    ".git",
    "robots",
    # Vendored from tolasing/groot -- don't reformat to our own style.
    "docker/utils",
    "docker/container.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "SIM", "RET"]
ignore = [
    "E402",   # module level import not at top of file -- Isaac Sim scripts must
              # create SimulationApp before importing any omni/isaacsim modules
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
